objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Construction_Completion_Date__c</fullName>
        <label>Construction Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Face_ID__c</fullName>
        <label>Face ID</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Wall Mount</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Face_Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is where you can choose the Face Specification Template. Once you choose this box, it will fill in a lot of the others.</description>
        <inlineHelpText>This is where you can choose the Face Specification Template. Once you choose this box, it will fill in a lot of the others.</inlineHelpText>
        <label>Face Specification</label>
        <referenceTo>Face_Specification__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kiosk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Kiosk__c</referenceTo>
        <relationshipLabel>Face</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visible_Area_Horizontal__c</fullName>
        <formula>Text(Face_Specification__r.Visible_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visible Area - Horizontal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible_Area_Vertical__c</fullName>
        <formula>TEXT(Face_Specification__r.Visible_Area_Vertical__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visible Area - Vertical</label>
        <type>Text</type>
    </fields>
</CustomObject>